--- a/VoiceCommander/android/app/build.gradle
+++ b/VoiceCommander/android/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
-    // https://stackoverflow.com/questions/35594783/how-do-i-display-an-animated-gif-in-react-native
+    // [ROB] https://stackoverflow.com/questions/35594783/how-do-i-display-an-animated-gif-in-react-native
     implementation 'com.facebook.fresco:fresco:2.0.0'
     implementation 'com.facebook.fresco:animated-gif:2.5.0'
     //
